[package]
name = "tlsh"
version = "0.1.0"
authors = ["1crcbl <1crcbl@protonmail.com>"]
edition = "2018"

license = "BSD-3-Clause OR Apache-2.0"

readme = "README.md"
description = "Rust port of Trend Micro Locality Sensitive Hashing"
repository = "https://github.com/1crcbl/tlsh-rs.git"

keywords = ["tlsh", "locality", "sensitive", "hashing"]
categories = ["algorithms"]

[dependencies]
